# ibkr-porez-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  index.html
.github/workflows/: ci.yml  docs.yml  release.yml
docs/en/: book.toml
docs/en/src/: SUMMARY.md  ibkr.md  index.md  installation.md  usage.md
docs/rs/: book.toml
docs/rs-cyr/: book.toml
docs/rs-cyr/src/: SUMMARY.md  ibkr.md  index.md  installation.md  usage.md
docs/rs/src/: SUMMARY.md  ibkr.md  index.md  installation.md  usage.md
docs/ru/: book.toml
docs/ru/src/: SUMMARY.md  ibkr.md  index.md  installation.md  usage.md
docs/theme/: lang-switcher.css  lang-switcher.js
docs/uk/: book.toml
docs/uk/src/: SUMMARY.md  ibkr.md  index.md  installation.md  usage.md
en/: 404.html  ibkr.html  index.html  installation.html  print.html  searcher-c2a407aa.js  searchindex-a13d6e33.js  searchindex-cb2d1adf.js  toc-7b549bb8.js  toc.html  usage.html
html/: index.html
html/coverage/home/runner/work/ibkr-porez/ibkr-porez/src/: config.rs.html  declaration_gains_xml.rs.html  declaration_income_xml.rs.html  declaration_manager.rs.html  due_date.rs.html  fetch.rs.html  holidays.rs.html  holidays_fallback.rs.html  ibkr_csv.rs.html  ibkr_flex.rs.html  import.rs.html  list.rs.html  main.rs.html  models.rs.html  nbs.rs.html  openholiday.rs.html  report_gains.rs.html  report_income.rs.html  stat.rs.html  storage.rs.html  storage_flex.rs.html  sync.rs.html  tax.rs.html
html/coverage/home/runner/work/ibkr-porez/ibkr-porez/src/cli/: assess.rs.html  attach.rs.html  config.rs.html  export.rs.html  fetch.rs.html  (+13 more)
rs/: 404.html  ibkr.html  index.html  installation.html  print.html  searcher-c2a407aa.js  searchindex-90485323.js  searchindex-908dcff0.js  toc-d421e268.js  toc.html  usage.html
rs-cyr/: 404.html  ibkr.html  index.html  installation.html  print.html  searcher-c2a407aa.js  searchindex-7ed6d6f4.js  searchindex-d26dd38f.js  toc-9d4f2c9e.js  toc.html  usage.html
ru/: 404.html  ibkr.html  index.html  installation.html  print.html  searcher-c2a407aa.js  searchindex-0ad974e6.js  searchindex-46faa1c8.js  toc-958fc4c1.js  toc.html  usage.html
scripts/: Info.plist.template  build-docs.sh
src/: config.rs  declaration_manager.rs  fetch.rs  holidays.rs  holidays_fallback.rs  ibkr_csv.rs  ibkr_flex.rs  lib.rs  main.rs  models.rs  nbs.rs  openholiday.rs  storage.rs  storage_flex.rs  sync.rs
src/cli/: config.rs  fetch.rs  mod.rs  pay.rs  revert.rs  submit.rs  sync.rs
src/gui/: app.rs  assessment_dialog.rs  config_dialog.rs  details_dialog.rs  icon.rs  import_dialog.rs  main_window.rs  mod.rs  styles.rs
tests/: test_cli.rs  test_declaration_manager.rs  test_e2e_cli.rs  test_e2e_gui.rs  test_gui.rs  test_ibkr_csv.rs  test_ibkr_flex.rs  test_models.rs  test_nbs.rs  test_python_compat.py  test_python_compat.rs  test_storage.rs  test_storage_flex.rs
uk/: 404.html  ibkr.html  index.html  installation.html  print.html  searcher-c2a407aa.js  searchindex-4a6f8163.js  searchindex-b19d6ff9.js  toc-55d7d457.js  toc.html  usage.html
wix/: main.wxs
(+7 files in other folders)
