[package]
name = "ibkr-porez"
default-run = "ibkr-porez"
version = "1.3.1"
edition = "2024"
description = "Serbian tax reporting for Interactive Brokers"
repository = "https://github.com/andgineer/ibkr-porez"
license = "MIT"

[features]
default = []
gui = ["dep:eframe", "dep:egui_extras", "dep:open", "dep:rfd", "dep:wgpu"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-str"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
quick-xml = { version = "0.37", features = ["serialize"] }
csv = "1"
comfy-table = { version = "7", features = ["tty"] }
console = "0.16"
dialoguer = "0.11"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = "0.3"
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "wgpu", "x11", "wayland"], optional = true }
egui_extras = { version = "0.31", optional = true }
open = { version = "5", optional = true }
rfd = { version = "0.15", optional = true }
dirs = "6"
zip = "2"
similar = "2"
indexmap = { version = "2", features = ["serde"] }
regex = "1"

[[bin]]
name = "ibkr-porez-gui"
path = "src/bin/gui.rs"
required-features = ["gui"]

[target.'cfg(windows)'.dependencies]
wgpu = { version = "24", features = ["dx12"], optional = true }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
mockito = "1"
rust_decimal_macros = "1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[profile.release]
strip = true
lto = true
codegen-units = 1
